<resources>
    <string name="app_name">Dispatcher</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="title_splash">Dispatcher</string>
    <string name="account_tab_text">Account Tab</string>
    <string name="favorites_tab_text">Favorites Tab</string>
    <string name="home_tab_text">Home Tab</string>
    <string name="add_title_hint">Add Title</string>
    <string name="save_btn">SAVE</string>
    <string name="add_favorite_hint">Add Favorite</string>
    <string name="add_body_hint">Add Body</string>
    <string name="register_title">Signup</string>
    <string name="auth_email_hint">Your email</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_verify_password_hint">Re-Enter Password</string>
    <string name="auth_signup_button_text">SIGNUP</string>
    <string name="auth_login_button_text">LOGIN</string>
    <string name="login_title">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="empty_email_error_message">Please enter your email address</string>
    <string name="empty_password_error_message">Please enter your password</string>
    <string name="empty_verify_password_error_message">Please enter your password again</string>
    <string name="different_passwords">Passwords are not the same</string>
    <string name="add_country_code_hint">Add Country Code</string>
    <string name="empty_response">"not found... try another country code"</string>
    <string name="navigate_to_dispatch_button">NAVIGATE TO DISPATCH</string>
    <string name="temp_home_title">Top Headlines in Israel</string>
    <string name="recent_searches">RECENR SEARCHES</string>
    <string name="clear_recent_searches_title_button">CLEAR</string>
    <string name="search_edit_text_hint">Search</string>
    <string name="search_empty_result_massage">We couldn\'t find any matches for your query</string>
    <string name="filter_bar_sort_by_title">Sort by</string>
</resources>