<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_background"
    tools:context="com.noalecohen.dispatcher.view.RegisterFragment">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/register_title"
        android:textColor="@color/auth_titles"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/register_email_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/auth_email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/auth_titles"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/register_password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_title" />

    <EditText
        android:id="@+id/register_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_background"
        android:drawableEnd="@drawable/ic_invisible_password"
        android:drawablePadding="20dp"
        android:hint="@string/auth_password_hint"
        android:inputType="textPassword"
        android:paddingEnd="20dp"
        android:textColorHint="@color/auth_titles"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/register_verify_password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_edit_text"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/register_verify_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_background"
        android:drawableEnd="@drawable/ic_invisible_password"
        android:drawablePadding="20dp"
        android:hint="@string/auth_verify_password_hint"
        android:inputType="textPassword"
        android:paddingEnd="20dp"
        android:textColorHint="@color/auth_titles"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_edit_text"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/stroke"
        app:layout_constraintBottom_toTopOf="@id/register_signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_verify_password_edit_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/primary_button"
        android:text="@string/auth_signup_button_text"
        android:textColor="@color/white"
        app:icon="@drawable/ic_arrow_right"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toTopOf="@id/register_signin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/secondary_button"
        android:text="@string/auth_login_button_text"
        android:textColor="@color/secondary_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_signup_button" />

</androidx.constraintlayout.widget.ConstraintLayout>