<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_background"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/login_title"
        android:textColor="@color/auth_titles"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/login_email_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/auth_email_hint"
        android:textColorHint="@color/auth_titles"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/login_password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title" />

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_background"
        android:drawableEnd="@drawable/ic_invisible_password"
        android:drawablePadding="20dp"
        android:hint="@string/auth_password_hint"
        android:inputType="numberPassword"
        android:paddingEnd="20dp"
        android:textColorHint="@color/auth_titles"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_edit_text"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/stroke"
        app:layout_constraintBottom_toTopOf="@id/login_signin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_edit_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_signin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/auth_login_button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/login_signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:icon="@drawable/ic_arrow_right"
        app:iconGravity="textEnd"
        android:backgroundTint="@color/primary_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"/>

    <Button
        android:id="@+id/login_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/auth_secondary_button_background"
        android:text="@string/auth_signup_button_text"
        android:textColor="@color/secondary_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_signin_button" />

</androidx.constraintlayout.widget.ConstraintLayout>